'misc' component, and the 'misc-objects-consed' variable has been
removed.

+++
** Reversed character ranges are no longer permitted in rx.
Previously, ranges where the starting character is greater than the
ending character were silently omitted.
For example, '(rx (any "@z-a" (?9 . ?0)))' would match '@' only.
Now, such rx expressions generate an error.


* Lisp Changes in Emacs 27.1

+++
** inhibit-null-byte-detection is renamed to inhibit-nul-byte-detection

+++
** 'self-insert-command' takes the char to insert as (optional) argument.

** 'lookup-key' can take a list of keymaps as argument.

+++
** 'condition-case' now accepts 't' to match any error symbol.

+++
** New function 'proper-list-p'.
Given a proper list as argument, this predicate returns its length;
otherwise, it returns nil.  'format-proper-list-p' is now an obsolete
alias for the new function.

+++
** Emacs Lisp integers can now be of arbitrary size.
Emacs uses the GNU Multiple Precision (GMP) library to support
integers whose size is too large to support natively.  The integers
supported natively are known as "fixnums", while the larger ones are
"bignums".  The new predicates 'bignump' and 'fixnump' can be used to
distinguish between these two types of integers.

All the arithmetic, comparison, and logical (a.k.a. "bitwise")
operations where bignums make sense now support both fixnums and
bignums.  However, note that unlike fixnums, bignums will not compare
equal with 'eq', you must use 'eql' instead.  (Numerical comparison
with '=' works on both, of course.)

Since large bignums consume a lot of memory, Emacs limits the size of
the largest bignum a Lisp program is allowed to create.  The
nonnegative value of the new variable 'integer-width' specifies the
maximum number of bits allowed in a bignum.  Emacs signals an integer
overflow error if this limit is exceeded.

Several primitive functions formerly returned floats or lists of