@@ -2798,6 +2798,20 @@ See also `locale-charset-language-names', `locale-language-names',
 		      'a4)))))))
   nil)
 
+;;; i18n (internationalization)
+
+(defun ngettext (msgid msgid_plural n)
+  "Return the plural form of the translation of the string.
+This function is similar to the `gettext' function as it finds the message
+catalogs in the same way.  But it takes two extra arguments.  The MSGID
+parameter must contain the singular form of the string to be converted.
+It is also used as the key for the search in the catalog.
+The MSGID_PLURAL parameter is the plural form.  The parameter N is used
+to determine the plural form.  If no message catalog is found MSGID is
+returned if N is equal to 1, otherwise MSGID_PLURAL."
+  (if (= n 1) msgid msgid_plural))
+
+
 ;;; Character property
 
 (put 'char-code-property-table 'char-table-extra-slots 5)
